--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Gravity
-email: hemangsk@gmail.com
-description: The Liberal Jekyll Theme
-baseurl: "/Gravity" # the subpath of your site, e.g. /blog
-url: "http://hemangsk.github.io" # the base hostname & protocol for your site
-twitter_username: hemang_kumar
-github_username:  hemangsk
+title: Akshit Arora
+email: akshit.arora@colorado.edu
+description: Thoughts
+baseurl: "/Gravity/" # the subpath of your site, e.g. /blog
+url: "https://aroraakshit.github.io" # the base hostname & protocol for your site
+twitter_username: AkshitArora1995
+github_username:  aroraakshit
 
 # Build settings
 markdown: kramdown
